--- a/ESPN Visualization.ipynb
+++ b/ESPN Visualization.ipynb
@@ -2222,22 +2222,12 @@
    "id": "5c5cf11b-0b1e-4ff8-a80d-779fc7cd0e5c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "hfjgdgf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ab4f010",
-   "metadata": {},
-   "source": [
-    "## thankyou\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
